Fix scrolling of tab bar when the visible tab is wider than the visible space

When finding the index we need to scroll to, use the one where both start
and end of the tab rect are outside the currently visible section.
Otherwise we wouldn't scroll when the left-most index ends outside the
visible section.

Add test, which requires that the scroll buttons have object names.

Fixes: QTBUG-70498
Change-Id: Id153c77dd5fca146612375e0ff39bd1f3e0536b1
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 06b1e404c936847038cc7a371720b05f31532b6a)
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>